$Id: ChangeLog,v 1.390 2007/07/18 11:44:23 haraldkipp Exp $

2007-07-18  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, tools/nutconf/Makefile.am: Automatically
	determine Lua header directory.


2007-07-17  Harald Kipp  <harald.kipp@egnite.de>

	* app/httpd/httpserv.c: Server thread names not unique on SAM7X.
	Fixed by Marti Raudsepp.

	* arch/arm/dev/at91_spi.c: At91SpiTransfer2() documentation added.

	* arch/unix/dev/ostimer.c, arch/unix/os/nutinit.c: Added 'noreturn'
	attribute to NutTimerEmulation() and NutInterruptEmulation()
	to avoid compiler warnings. Thanks to Michael Mueller for his
	Ubuntu Emulation How-To.

	* net/netdebug.c, include/net/netdebug.h: Output strings must be
	signed characters. Fixed provided by Michael Mueller.

	* dev/ppp.c: Fixed bug #1369171, memory leak in NutPppClose().
	Thanks to Sergey Danilov.

	* nutsetup, arch/Makefile, include/cfg/arch.h: 
	Building in the source tree should work again for AT91 devices.


2007-07-16  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac: Supports latest autoconf.

	* dev/Makefile: RTC support was missing.

	* include/arch/arm/at91sam9260.h: Default PIO_BASE added.

	* include/cfg/twi.h: Missing default delay added.

	* pro/Makefile: Missing discovery support added.


2007-07-13  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* include/arch/arm/at91sam7x.h: Added UDP support
        * include/arch/arm/at91_udp.h: Defines for arm7 UDP controller

2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* net/Makefile:	Commented in igmp_in.c and igmp_out.c again 
        * net/ipin.c: igmp support reenabled

2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* dev/twbbif.c: Added default TWI_DELAY for avr architecture 
        to allow in-tree compilation
	* net/Makefile:	Commented out igmp support as long as it does 
        not exists to allow in-tree compilation
        * net/ipin.c: Commented out igmp support as long as it does not compile
